modify list.html and add linkage from index to list

--- a/templates/index.html
+++ b/templates/index.html
@@ -100,7 +100,7 @@
             <h1>게시판에 오신 것을 환영합니다.</h1>
             <p class="lead"></p>
             <p class="lead">
-                <a href="#" class="btn btn-lg btn-light fw-bold border-white bg-white">게시판 바로가기</a>
+                <a href="bbs/list/" class="btn btn-lg btn-light fw-bold border-white bg-white">게시판 바로가기</a>
             </p>
         </main>
 
