--- a/bbs/templates/bbs/list.html
+++ b/bbs/templates/bbs/list.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{% extends 'base.html' %}
+{% block html_body %}
+    <div class="container">
+        <h1>Bulletin Board System</h1>
+    </div>
+{% endblock %}
